--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "axios": "^1.4.0",
+    "mongodb": "^5.9.2",
+    "node-cron": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "socket.io-client": "^4.6.1",
-    "node-cron": "^3.0.3",
-    "tar": "^6.1.15",
-    "mongodb": "^5.7.0"
+    "tar": "^6.1.15"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
