--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ia-assistente-flowoff-frontend",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js",
+    "start": "HOST=0.0.0.0 webpack serve --config webpack.config.js",
     "build": "webpack --config webpack.prod.js",
     "test": "jest",
     "analyze": "webpack --config webpack.prod.js --analyze",
