--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "ia-assistente-flowoff-frontend",
   "version": "1.0.0",
   "scripts": {
-    "start": "HOST=0.0.0.0 react-scripts start",
-    "build": "webpack --config webpack.prod.js",
+    "start": "webpack serve --config webpack.config.js --mode development",
+    "build": "webpack --config webpack.config.js --mode production",
     "test": "jest",
     "analyze": "webpack --config webpack.prod.js --analyze",
     "backup": "node scripts/backup.js",
@@ -45,7 +45,7 @@
     "webpack": "^5.82.1",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.1.1",
-    "webpack-dev-server": "^4.15.0"
+    "webpack-dev-server": "^4.15.2"
   },
   "browserslist": {
     "production": [
