--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "ia-assistente-flowoff-frontend",
   "version": "1.0.0",
   "scripts": {
-    "start": "node server.js",
-    "build": "webpack --config webpack.config.js --mode production",
+    "start": "webpack serve --config webpack.config.js",
+    "build": "webpack --config webpack.prod.js",
+    "prod": "node server.js",
     "test": "jest",
     "analyze": "webpack --config webpack.prod.js --analyze",
     "backup": "node scripts/backup.js",
@@ -15,6 +16,9 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "axios": "^1.4.0",
+    "compression": "^1.7.4",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "mongodb": "^5.9.2",
     "node-cron": "^3.0.3",
     "react": "^18.2.0",
