--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "webpack serve --config webpack.config.js",
     "build": "webpack --config webpack.prod.js",
-    "prod": "node server.js",
+    "prod": "npm install --omit=dev && node server.js",
     "test": "jest",
     "analyze": "webpack --config webpack.prod.js --analyze",
     "backup": "node scripts/backup.js",
@@ -18,7 +18,7 @@
     "axios": "^1.4.0",
     "compression": "^1.7.4",
     "express": "^4.18.2",
-    "helmet": "^7.1.0",
+    "helmet": "^7.2.0",
     "mongodb": "^5.9.2",
     "node-cron": "^3.0.3",
     "react": "^18.2.0",
