--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "ia-assistente-flowoff-frontend",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
     "start": "webpack serve --config webpack.config.js",
-    "build": "webpack --config webpack.prod.js",
+    "build": "NODE_ENV=production webpack --config webpack.prod.js",
     "prod": "npm install --omit=dev && node server.js",
     "test": "jest",
     "analyze": "webpack --config webpack.prod.js --analyze",
